Fixed spacing below car pictures

--- a/_sass/pages/cars.scss
+++ b/_sass/pages/cars.scss
@@ -30,7 +30,7 @@
         @extend .img;
         background-size: cover;
         height: 200px;
-        margin: -1 * $standard-margin -1 * $standard-margin 0;
+        margin: -1 * $standard-margin -1 * $standard-margin $standard-margin;
         
         &.sixteen-car {
             background-image: url('../images/cars/banners/2016.jpg');
@@ -115,7 +115,7 @@
         
         .big-picture {
             height: 500px;
-            margin: -2 * $standard-margin 0 0;
+            margin: -2 * $standard-margin 0 $standard-margin * 2;
         }
 
         .specs {
